<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvInput"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/light_grey"
        android:textColor="@color/black"
        android:padding="10dp"
        android:textSize="48sp"
        android:text="@string/calc_text"
        android:gravity="end|bottom"
        tools:ignore="InvalidId" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:layout_margin="2dp"
            android:id="@+id/Button7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_7"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml" />
        <!-- onClick property is no more used instead data binding or onClickListener is preferred. -->
        <Button
            android:layout_margin="2dp"
            android:id="@+id/Button8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_8"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:layout_margin="2dp"
            android:id="@+id/Button9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_9"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:layout_margin="2dp"
            android:id="@+id/ButtonDivide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/divide"
            android:onClick="onOperator"
            tools:ignore="UsingOnClickInXml" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:layout_margin="2dp"
            android:id="@+id/Button4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_4"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml" />
        <!-- onClick property is no more used instead data binding or onClickListener is preferred. -->
        <Button
            android:layout_margin="2dp"
            android:id="@+id/Button5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_5"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:layout_margin="2dp"
            android:id="@+id/Button6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_6"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:layout_margin="2dp"
            android:id="@+id/ButtonMultiply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/multiply"
            android:onClick="onOperator"
            tools:ignore="UsingOnClickInXml" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:layout_margin="2dp"
            android:id="@+id/Button1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_1"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml" />
        <!-- onClick property is no more used instead data binding or onClickListener is preferred. -->
        <Button
            android:layout_margin="2dp"
            android:id="@+id/Button2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_2"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:layout_margin="2dp"
            android:id="@+id/Button3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_3"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:layout_margin="2dp"
            android:id="@+id/ButtonSubtract"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/minus"
            android:onClick="onOperator"
            tools:ignore="UsingOnClickInXml" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <!--layout_weight property distributes the width equally. -->
        <Button
            android:layout_margin="2dp"
            android:id="@+id/Button0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_0"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:layout_margin="2dp"
            android:id="@+id/ButtonDot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_dot"
            android:onClick="onDecimalPoint"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:layout_margin="2dp"
            android:id="@+id/ButtonClear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/clear"
            android:onClick="onClear"
            tools:ignore="UsingOnClickInXml" />
        <!-- onClick property is no more used instead data binding or onClickListener is preferred. -->

        <Button
            android:layout_margin="2dp"
            android:id="@+id/ButtonPlus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/plus"
            android:onClick="onOperator"
            tools:ignore="UsingOnClickInXml" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <!--layout_weight property distributes the width equally. -->
        <Button
            android:layout_margin="2dp"
            android:id="@+id/ButtonEqual"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/equal"
            android:onClick="onEqual"
            tools:ignore="UsingOnClickInXml" />

    </LinearLayout>


</LinearLayout>